# routes/api.php
@@ -27,6 +27,7 @@ Route::group(['prefix' => 'v1'], function () {
         Route::get('essences/{essence}', [\App\Http\Controllers\EssenceController::class, 'show'])->name('essence.show');
         Route::get('essences/{essence}/paginate', [\App\Http\Controllers\EssenceController::class, 'paginate']);
         Route::get('essences/{essence}/sub-essences/{subEssence}', [\App\Http\Controllers\SubEssenceController::class, 'show'])->name('sub-essence.show');
+        Route::get('sub-essences/{subEssence}/paginate', [\App\Http\Controllers\SubEssenceController::class, 'paginateShort']);
         Route::get('essences/{essence}/sub-essences/{subEssence}/paginate', [\App\Http\Controllers\SubEssenceController::class, 'paginate']);
         Route::get('essences/{essence}/sub-essences/{subEssence}/products/{product}', [\App\Http\Controllers\ProductController::class, 'show']);
 
@@ -36,6 +37,10 @@ Route::group(['prefix' => 'v1'], function () {
             Route::post('sub-essences/{subEssence}', [FavoriteController::class, 'storeSubEssence']);
             Route::delete('products/{product}', [FavoriteController::class, 'destroyProduct']);
             Route::delete('sub-essences/{subEssence}', [FavoriteController::class, 'destroySubEssence']);
+        });
+
+        Route::prefix('rating')->group(function () {
+           Route::post('', fn() => 'ok');
         });
 
         Route::get('user-info', [UserController::class, 'index']);
